Source/WebCore/html/HTMLAnchorElement.cpp
@@ -221,8 +221,9 @@ void HTMLAnchorElement::parseMappedAttribute(Attribute* attr)
                 attr->setValue(nullAtom);
             }
         }
-    } else if (attr->name() == nameAttr ||
-             attr->name() == titleAttr) {
+    } else if (attr->name() == nameAttr) {
+        invalidateNodeListsCacheAfterAttributeChanged();
+    } else if (attr->name() == titleAttr) {
         // Do nothing.
     } else if (attr->name() == relAttr)
         setRel(attr->value());
