Source/WebCore/html/HTMLEmbedElement.cpp
@@ -118,6 +118,7 @@ void HTMLEmbedElement::parseMappedAttribute(Attribute* attr)
             document->addNamedItem(value);
         }
         m_name = value;
+        invalidateNodeListsCacheAfterAttributeChanged();
     } else
         HTMLPlugInImageElement::parseMappedAttribute(attr);
 }
