Source/WebCore/html/HTMLFormElement.cpp
@@ -392,6 +392,7 @@ void HTMLFormElement::parseMappedAttribute(Attribute* attr)
             document->addNamedItem(newName);
         }
         m_name = newName;
+        invalidateNodeListsCacheAfterAttributeChanged();
     } else
         HTMLElement::parseMappedAttribute(attr);
 }
